--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
 
  zabbix-server:
-  container_name: pd-zabbix-server
+  container_name: pd-zabbix-server-5.2
   image: zabbix/zabbix-server-mysql:alpine-5.2-latest
   ports:
    - "10051:10051"
@@ -66,7 +66,7 @@ services:
    com.zabbix.os: "alpine"
 
  zabbix-proxy-sqlite3:
-  container_name: pd-zabbix-proxy-sqlite3
+  container_name: pd-zabbix-proxy-sqlite3-5.2
   image: zabbix/zabbix-proxy-sqlite3:alpine-5.2-latest
   ports:
    - "10061:10051"
@@ -116,7 +116,7 @@ services:
    com.zabbix.os: "alpine"
 
  zabbix-proxy-mysql:
-  container_name: pd-zabbix-proxy-mysql
+  container_name: pd-zabbix-proxy-mysql-5.2
   image: zabbix/zabbix-proxy-mysql:alpine-5.2-latest
   ports:
    - "10071:10051"
@@ -172,7 +172,7 @@ services:
    com.zabbix.os: "alpine"
 
  zabbix-web-nginx-mysql:
-  container_name: pd-zabbix-web
+  container_name: pd-zabbix-web-5.2
   image: zabbix/zabbix-web-nginx-mysql:alpine-5.2-latest
   ports:
    - "8080:8080"
@@ -227,7 +227,7 @@ services:
    com.zabbix.os: "alpine"
 
  zabbix-agent:
-  container_name: pd-zabbix-agent
+  container_name: pd-zabbix-agent-5.2
   hostname: zabbix-agent001.grayowl.us
   image: zabbix/zabbix-agent:alpine-5.2-latest
   ports:
@@ -267,7 +267,7 @@ services:
    com.zabbix.os: "alpine"
 
  zabbix-java-gateway:
-  container_name: pd-zabbix-java-gateway
+  container_name: pd-zabbix-java-gateway-5.2
   image: zabbix/zabbix-java-gateway:alpine-5.2-latest
 
   ports:
@@ -320,7 +320,7 @@ services:
    com.zabbix.os: "alpine"
 
  mysql-server:
-  container_name: pd-mariadb-server
+  container_name: pd-mariadb-server-5.2
   image: mariadb:10.5
   command:
    - mysqld
@@ -344,7 +344,7 @@ services:
      - mysql-database
 
  db_data_mysql:
-  container_name: pd-busybox
+  container_name: pd-busybox-5.2
   image: busybox:1.32
   volumes:
    - ./zbx_env/var/lib/mysql:/var/lib/mysql:rw
